# cse412proj

./: README.md  docker-compose.yaml
client/: .env  package-lock.json  package.json
client/src/: App.css  App.js  index.js  useUser.js  userContext.js
client/src/components/CreateAccount/: CreateAccount.css  CreateAccount.js
client/src/components/Login/: Login.css  Login.js
client/src/components/Navigation/: Navigation.css  Navigation.js
client/src/components/Profile/: Profile.css  Profile.js
client/src/components/Profile/Info/: Info.js
client/src/components/Profile/Taken/: Taken.js
client/src/components/Profile/Wishlist/: Wishlist.css  Wishlist.js
client/src/components/Search/: Search.css  Search.js
db/: Dockerfile  classes-2214.csv  create_tables.sql  create_tables_backup.sql  populate_data.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/api/: class.rs  class_list.rs  common.rs  mod.rs  services.rs  user.rs
server/src/lib/: error.rs
server/src/model/: class.rs  user.rs
server/src/utils/: error.rs
