[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7"
actix-cors = "0.6"
actix-identity = "0.5"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-http = "3.2"
chrono = "0.4.23"
rand = "0.8.5"
serde_json = "1.0.88"

serde = { version = "1.0", features = ["derive"]}