[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7"
actix-cors = "0.6"
actix-identity = "0.5"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-http = "3.2"
chrono = "0.4.23"
rand = "0.8.5"
serde_json = "1.0.88"
env_logger = "^0.4"

serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]